apps.theme...common: Changed extrabaronright style to avoid overflow.

--- a/src/devilry/devilry/apps/theme/static/theme/themes/devilry/common.scss
+++ b/src/devilry/devilry/apps/theme/static/theme/themes/devilry/common.scss
@@ -281,7 +281,7 @@ a.warning-button {
         //.editform-sidebar {
         //}
         .extrabaronright {
-            margin-left: 30px;
+            padding-left: 20px;
         }
     }
 }
